updated webpage outline

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,15 +8,36 @@
   </head>
   <body>
     <header>
-      <div class="header">
-        <h3>Megacorpse</h3>
-        <div class="header-right">
-          <a href="">link one</a>
-          <a href="">link two</a>
-          <a href="">link three</a>
-        </div>
-      </div>
+      <inner-column>
+        <h1>Heading</h1>
+      </inner-column>
     </header>
-    <footer></footer>
+    <main>
+      <section>
+        <inner-column>
+          <h1>Welcome</h1>
+        </inner-column>
+      </section>
+      <section>
+        <inner-column>
+          <h1>Things</h1>
+        </inner-column>
+      </section>
+      <section>
+        <inner-column>
+          <h1>Quote</h1>
+        </inner-column>
+      </section>
+      <section>
+        <inner-column>
+          <h1>Call to action</h1>
+        </inner-column>
+      </section>
+    </main>
+    <footer>
+      <inner-column>
+        <h1>Heading</h1>
+      </inner-column>
+    </footer>
   </body>
 </html>
